working on front end

--- a/index.ejs
+++ b/index.ejs
@@ -12,8 +12,8 @@
 </head>
 <body>
 <h3>Engaged 12/24 - 50% engagement</h3>
-<input id="start" type="button" value="Start Headed" onclick="takePicture();" />
-<input id="stop" type="button" value="Stop Headed" onclick="takePicture();" />
+<input id="start" type="button" value="Start Headed" onclick="startRekognition(run = true);" />
+<input id="stop" type="button" value="Stop Headed" onclick="startRekognition(run = false);" />
 
 </body>
 <footer>
