Suggests button value changes.

--- a/index.ejs
+++ b/index.ejs
@@ -12,6 +12,7 @@
 </head>
 <body>
 <h3>Engaged 12/24 - 50% engagement</h3>
+<!-- I would prefer the values to be one word, unless this exact value is required -->
 <input id="start" type="button" value="Start Headed" onclick="startRekognition(run = true);" />
 <input id="stop" type="button" value="Stop Headed" onclick="startRekognition(run = false);" />
 
