--- a/front-end/public/analytics.ejs
+++ b/front-end/public/analytics.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
@@ -16,7 +17,11 @@
 </body>
 
 <footer>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="../app.js"></script>
+    <script type="text/javascript"></script>
+    <script src="../app.js">
+      $('#start').on('click', function() {
+        console.log('hi you started');
+      });
+    </script>
 </footer>
 </html>
