added test route for deployment

--- a/front-end/public/analytics.ejs
+++ b/front-end/public/analytics.ejs
@@ -17,11 +17,6 @@
 </body>
 
 <footer>
-    <script type="text/javascript"></script>
-    <script src="../app.js">
-      $('#start').on('click', function() {
-        console.log('hi you started');
-      });
-    </script>
+    <script src= "../app.js"></script>
 </footer>
 </html>
